--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,19 @@
         <title></title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="css/style.css" rel="stylesheet">
+        <!-- <link href="css/style.css" rel="stylesheet"> -->
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.7/react.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.7/react-dom.js"></script>
+
+
     </head>
     <body>
-        <h1>Hello React!</h1>
-    
+        <div id="site"></div>
     </body>
+
+    <script type="text/babel" src="site.jsx">
+
+    </script>
 </html>
