--- a/public/index.html
+++ b/public/index.html
@@ -6,17 +6,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- <link href="css/style.css" rel="stylesheet"> -->
 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.7/react.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.7/react-dom.js"></script>
-
-
     </head>
     <body>
-        <div id="site"></div>
+        <div id="app"></div>
     </body>
 
-    <script type="text/babel" src="site.jsx">
+    <script src="bundle.js">
 
     </script>
 </html>
